--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,4 +22,20 @@ jobs:
       - run: |
           python -m pip install --upgrade pip
           pip install -e .[full] --prefer-binary
-      - run: pytest -q
+          pip install coverage pytest-cov
+      - name: Run tests with coverage
+        run: |
+          pytest -q --cov=a3d --cov-report=xml --cov-report=term-missing
+      - name: Upload coverage artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: coverage-${{ matrix.os }}-py${{ matrix.python }}
+          path: |
+            coverage.xml
+      - name: Upload out/ artifacts (plots/csv)
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: research-outputs-${{ matrix.os }}-py${{ matrix.python }}
+          path: |
+            out/
