--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,12 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+out/
+*.csv
+*.parquet
+*.png
+*.pdf
+.venv/
+*.py[cod]
+*.pyd
+*.pyo
